kubernetes/apps/selfhosted/gitea/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh-direct
  annotations:
    lbipam.cilium.io/ips: "10.50.100.4"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
  ports:
    - name: ssh
      port: 22
      protocol: TCP
      targetPort: 2222
    - name: ssh-forward
      port: 2222
      protocol: TCP
      targetPort: 2222
