kubernetes/apps/selfhosted/gitea/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea
  annotations:
    gatus.home-operations.com/endpoint: |-
      url: https://git.${DOMAIN_7}/api/healthz
spec:
  hostnames:
    - "git.${DOMAIN_7}"
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: domain-7-subdomain-https
    - name: internal
      namespace: kube-system
      sectionName: domain-7-subdomain-https
  rules:
    - backendRefs:
        - name: gitea-http
          port: 3000
